--- a/public/styles.css
+++ b/public/styles.css
@@ -26,7 +26,8 @@ button {
   background: rgba(0, 0, 0, 0.075);
   border-radius: 50%;
   -webkit-transform: scale(0);
-          transform: scale(0);
+          -ms-transform: scale(0);
+      transform: scale(0);
   pointer-events:none;
 }
 .circle.animate {
@@ -60,6 +61,7 @@ button {
       background:#202225;
       font-family: 'K2D', sans-serif;
       color:#e6e6e6;
+      overflow:hidden;
     }
     
     h1, h4{
@@ -71,9 +73,15 @@ button {
       z-index:-1;
       margin:auto;
       left:0;right:0;top:0;bottom:0;
+      display:-webkit-box;
+      display:-ms-flexbox;
       display:flex;
-      justify-content:center;
-      align-items:center;
+      -webkit-box-pack:center;
+          -ms-flex-pack:center;
+              justify-content:center;
+      -webkit-box-align:center;
+          -ms-flex-align:center;
+              align-items:center;
     }
     
     .info-box{
@@ -83,11 +91,13 @@ button {
       line-height:30px;
       position:relative;
       overflow:hidden;
-      animation:bounce-anim-out 1000ms linear both;
+      -webkit-animation:bounce-anim-out 1000ms linear both;
+              animation:bounce-anim-out 1000ms linear both;
     }
 
 .infoButSpam{
-      animation:bounce-anim 1000ms linear both;
+      -webkit-animation:bounce-anim 1000ms linear both;
+              animation:bounce-anim 1000ms linear both;
 }
     
     h1{
@@ -153,15 +163,20 @@ button {
     }
     
     .info-box .top{
+      display:-webkit-box;
+      display:-ms-flexbox;
       display:flex;
-      justify-content:space-between;
-      align-items:center;
+      -webkit-box-pack:justify;
+          -ms-flex-pack:justify;
+              justify-content:space-between;
+      -webkit-box-align:center;
+          -ms-flex-align:center;
+              align-items:center;
       
     }
     .noselect {
       -webkit-touch-callout:none;
-      -webkit-user-select:none;
-      -khtml-user-select:none; 
+      -webkit-user-select:none; 
       -moz-user-select:none; 
       -ms-user-select:none; 
       user-select:none; 
@@ -183,6 +198,8 @@ button {
       .info-box{
         width:100%;
         font-size:0.7em;
+        -webkit-animation:unset;
+                animation:unset;
       }
       .info-box .noselect,
       .info-box button{
@@ -195,13 +212,20 @@ button {
         font-size:3.6em;
       }
       .infoButSpam{
-        animation:unset;
+        -webkit-animation:unset;
+                animation:unset;
       }
       .info-box .top{
+        display:-webkit-box;
+        display:-ms-flexbox;
         display:flex;
-        flex-wrap:wrap;
-        align-content:center;
-        justify-content:center;
+        -ms-flex-wrap:wrap;
+            flex-wrap:wrap;
+        -ms-flex-line-pack:center;
+            align-content:center;
+        -webkit-box-pack:center;
+            -ms-flex-pack:center;
+                justify-content:center;
         padding-bottom:14px;
       }
     }
@@ -219,6 +243,35 @@ button {
     }
     .important-info a {
       color:aqua;
+    }
+
+    @-webkit-keyframes bounce-anim { 
+      0% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      3.4% { -webkit-transform: matrix3d(1.189, 0, 0, 0, 0, 1.244, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.189, 0, 0, 0, 0, 1.244, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      4.7% { -webkit-transform: matrix3d(1.27, 0, 0, 0, 0, 1.36, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.27, 0, 0, 0, 0, 1.36, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      6.81% { -webkit-transform: matrix3d(1.396, 0, 0, 0, 0, 1.536, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.396, 0, 0, 0, 0, 1.536, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      9.41% { -webkit-transform: matrix3d(1.53, 0, 0, 0, 0, 1.701, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.53, 0, 0, 0, 0, 1.701, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      10.21% { -webkit-transform: matrix3d(1.565, 0, 0, 0, 0, 1.736, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.565, 0, 0, 0, 0, 1.736, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      13.61% { -webkit-transform: matrix3d(1.674, 0, 0, 0, 0, 1.799, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.674, 0, 0, 0, 0, 1.799, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      14.11% { -webkit-transform: matrix3d(1.685, 0, 0, 0, 0, 1.798, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.685, 0, 0, 0, 0, 1.798, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      17.52% { -webkit-transform: matrix3d(1.725, 0, 0, 0, 0, 1.744, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.725, 0, 0, 0, 0, 1.744, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      18.72% { -webkit-transform: matrix3d(1.727, 0, 0, 0, 0, 1.712, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.727, 0, 0, 0, 0, 1.712, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      21.32% { -webkit-transform: matrix3d(1.718, 0, 0, 0, 0, 1.642, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.718, 0, 0, 0, 0, 1.642, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      24.32% { -webkit-transform: matrix3d(1.69, 0, 0, 0, 0, 1.576, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.69, 0, 0, 0, 0, 1.576, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      25.23% { -webkit-transform: matrix3d(1.68, 0, 0, 0, 0, 1.563, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.68, 0, 0, 0, 0, 1.563, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      29.03% { -webkit-transform: matrix3d(1.638, 0, 0, 0, 0, 1.538, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.638, 0, 0, 0, 0, 1.538, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      29.93% { -webkit-transform: matrix3d(1.629, 0, 0, 0, 0, 1.539, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.629, 0, 0, 0, 0, 1.539, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      35.54% { -webkit-transform: matrix3d(1.588, 0, 0, 0, 0, 1.577, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.588, 0, 0, 0, 0, 1.577, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      36.74% { -webkit-transform: matrix3d(1.583, 0, 0, 0, 0, 1.587, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.583, 0, 0, 0, 0, 1.587, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      41.04% { -webkit-transform: matrix3d(1.576, 0, 0, 0, 0, 1.613, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.576, 0, 0, 0, 0, 1.613, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      44.44% { -webkit-transform: matrix3d(1.58, 0, 0, 0, 0, 1.619, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.58, 0, 0, 0, 0, 1.619, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      52.15% { -webkit-transform: matrix3d(1.595, 0, 0, 0, 0, 1.604, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.595, 0, 0, 0, 0, 1.604, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      59.86% { -webkit-transform: matrix3d(1.604, 0, 0, 0, 0, 1.594, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.604, 0, 0, 0, 0, 1.594, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      63.26% { -webkit-transform: matrix3d(1.604, 0, 0, 0, 0, 1.595, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.604, 0, 0, 0, 0, 1.595, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      75.28% { -webkit-transform: matrix3d(1.601, 0, 0, 0, 0, 1.602, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.601, 0, 0, 0, 0, 1.602, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      85.49% { -webkit-transform: matrix3d(1.599, 0, 0, 0, 0, 1.6, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.599, 0, 0, 0, 0, 1.6, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      90.69% { -webkit-transform: matrix3d(1.599, 0, 0, 0, 0, 1.599, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.599, 0, 0, 0, 0, 1.599, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      100% { -webkit-transform: matrix3d(1.6, 0, 0, 0, 0, 1.6, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.6, 0, 0, 0, 0, 1.6, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); } 
     }
 
     @keyframes bounce-anim { 
@@ -251,6 +304,36 @@ button {
     }
 
 
+    @-webkit-keyframes bounce-anim-out { 
+      0% { -webkit-transform: matrix3d(1.6, 0, 0, 0, 0, 1.6, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.6, 0, 0, 0, 0, 1.6, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      3.4% { -webkit-transform: matrix3d(1.411, 0, 0, 0, 0, 1.356, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.411, 0, 0, 0, 0, 1.356, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      4.7% { -webkit-transform: matrix3d(1.33, 0, 0, 0, 0, 1.24, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.33, 0, 0, 0, 0, 1.24, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      6.81% { -webkit-transform: matrix3d(1.204, 0, 0, 0, 0, 1.064, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.204, 0, 0, 0, 0, 1.064, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      9.41% { -webkit-transform: matrix3d(1.07, 0, 0, 0, 0, 0.899, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.07, 0, 0, 0, 0, 0.899, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      10.21% { -webkit-transform: matrix3d(1.035, 0, 0, 0, 0, 0.864, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.035, 0, 0, 0, 0, 0.864, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      13.61% { -webkit-transform: matrix3d(0.926, 0, 0, 0, 0, 0.801, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.926, 0, 0, 0, 0, 0.801, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      14.11% { -webkit-transform: matrix3d(0.915, 0, 0, 0, 0, 0.802, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.915, 0, 0, 0, 0, 0.802, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      17.52% { -webkit-transform: matrix3d(0.875, 0, 0, 0, 0, 0.856, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.875, 0, 0, 0, 0, 0.856, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      18.72% { -webkit-transform: matrix3d(0.873, 0, 0, 0, 0, 0.888, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.873, 0, 0, 0, 0, 0.888, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      21.32% { -webkit-transform: matrix3d(0.882, 0, 0, 0, 0, 0.958, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.882, 0, 0, 0, 0, 0.958, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      24.32% { -webkit-transform: matrix3d(0.91, 0, 0, 0, 0, 1.024, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.91, 0, 0, 0, 0, 1.024, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      25.23% { -webkit-transform: matrix3d(0.92, 0, 0, 0, 0, 1.037, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.92, 0, 0, 0, 0, 1.037, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      29.03% { -webkit-transform: matrix3d(0.962, 0, 0, 0, 0, 1.062, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.962, 0, 0, 0, 0, 1.062, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      29.93% { -webkit-transform: matrix3d(0.971, 0, 0, 0, 0, 1.061, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.971, 0, 0, 0, 0, 1.061, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      35.54% { -webkit-transform: matrix3d(1.012, 0, 0, 0, 0, 1.023, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.012, 0, 0, 0, 0, 1.023, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      36.74% { -webkit-transform: matrix3d(1.017, 0, 0, 0, 0, 1.013, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.017, 0, 0, 0, 0, 1.013, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      41.04% { -webkit-transform: matrix3d(1.024, 0, 0, 0, 0, 0.987, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.024, 0, 0, 0, 0, 0.987, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      44.44% { -webkit-transform: matrix3d(1.02, 0, 0, 0, 0, 0.981, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.02, 0, 0, 0, 0, 0.981, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      52.15% { -webkit-transform: matrix3d(1.005, 0, 0, 0, 0, 0.996, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.005, 0, 0, 0, 0, 0.996, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      59.86% { -webkit-transform: matrix3d(0.996, 0, 0, 0, 0, 1.006, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.996, 0, 0, 0, 0, 1.006, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      63.26% { -webkit-transform: matrix3d(0.996, 0, 0, 0, 0, 1.005, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.996, 0, 0, 0, 0, 1.005, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      75.28% { -webkit-transform: matrix3d(0.999, 0, 0, 0, 0, 0.998, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.999, 0, 0, 0, 0, 0.998, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      85.49% { -webkit-transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      90.69% { -webkit-transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+      100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); } 
+    }
+
+
     @keyframes bounce-anim-out { 
       0% { -webkit-transform: matrix3d(1.6, 0, 0, 0, 0, 1.6, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.6, 0, 0, 0, 0, 1.6, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
       3.4% { -webkit-transform: matrix3d(1.411, 0, 0, 0, 0, 1.356, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.411, 0, 0, 0, 0, 1.356, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
@@ -279,3 +362,9 @@ button {
       90.69% { -webkit-transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
       100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); } 
     }
+
+
+.musicDisabler a{
+	cursor:pointer;
+	text-decoration:underline;
+}
