--- a/public/styles.css
+++ b/public/styles.css
@@ -136,7 +136,7 @@ button{
 	font:inherit;
 	border:none;
 	color:white;
-	background:#6e39af;
+	background:#cb1567;
 	border-radius:4px;
 	line-height:20px;
 	padding:8px 40px;
